@@ -46,8 +46,8 @@
 /*
  * Function prototypes
  */
-extern  void    crypto_recv     P((struct peer *, struct recvbuf *));
-extern  int     crypto_xmit     P((u_int32 *, int, u_int, keyid_t,
+extern	void	crypto_recv	P((struct peer *, struct recvbuf *));
+extern	int	crypto_xmit	P((u_int32 *, int, u_int, keyid_t,
 				    int));
 extern	keyid_t	session_key	P((struct sockaddr_in *, struct
 				    sockaddr_in *, keyid_t, keyid_t,
