@@ -553,7 +553,6 @@ crypto_recv(
 		}
 		authlen += len;
 	}
-	return;
 }
 
 
@@ -763,24 +762,41 @@ crypto_xmit(
 void
 crypto_agree(void)
 {
-	u_int len, temp;
+	char filename[MAXFILENAME];
 	R_RANDOM_STRUCT randomstr;
 	R_SIGNATURE_CTX ctx;	/* signature context */
+	u_int len, temp;
 	int rval;
 	int i;
+	char *sptr;
 
 	/*
-	 * Sign host name and timestamp.
+	 * Sign public key file name and timestamp.
 	 */
 	host.tstamp = htonl(sys_revoketime.l_ui);
-	host.vallen = htonl(sys_hostnamelen);
-	host.val = sys_hostname;
+	if (public_key_file == NULL) {
+		msyslog(LOG_ERR,
+		    "crypto_agree: public key file unavailable");
+		return;
+	}
+	if ((sptr = strstr(public_key_file, sys_hostname)) == NULL) {
+		msyslog(LOG_ERR,
+		    "crypto_agree: public key file %s not generated by this host",
+		    public_key_file);
+		return;
+	}
+	strcpy(filename, sptr);
+	for (len = strlen(filename) + 1; len % 4 != 0; len++)
+		filename[len] = 0;
+	host.vallen = htonl(len);
+	host.val = emalloc(len);
+	memcpy(host.val, filename, len);
 	host.siglen = dh_params.primeLen;
 	if (host.sig == NULL)
 		host.sig = emalloc(dh_params.primeLen);
 	R_SignInit(&ctx, DA_MD5);
 	R_SignUpdate(&ctx, (u_char *)&host, 8);
-	R_SignUpdate(&ctx, host.val, sys_hostnamelen);
+	R_SignUpdate(&ctx, host.val, len);
 	rval = R_SignFinal(&ctx, host.sig, &temp, &private_key);
 	if (rval != 0) {
 		msyslog(LOG_ERR,
@@ -816,7 +832,7 @@ crypto_agree(void)
 	}
 
 	/*
-	 * Sigfie-Hellman public value and save for later.
+	 * Sign Diffie-Hellman public value.
 	 */
 	if (dh_sign == NULL)
 		dh_sign = emalloc(dh_params.primeLen);
@@ -1047,7 +1063,7 @@ crypto_setup(void)
 	if (public_key_file == NULL) {
 		gethostname(hostname, MAXFILENAME);
 		snprintf(filename, MAXFILENAME - 1, "ntpkey_%s",
-			 hostname);
+		    hostname);
 		public_key_file = emalloc(strlen(filename) + 1);
 		strcpy(public_key_file, filename);
 	}
@@ -1063,7 +1079,7 @@ crypto_setup(void)
 		strcpy(filename, dh_params_file);
 	else
 		snprintf(filename, MAXFILENAME - 1, "%s%s", keysdir,
-			 dh_params_file);
+		    dh_params_file);
 
 	str = fopen(filename, "r");
 	if (str == NULL) {
