@@ -1,3 +1,14 @@
+2000-05-01  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* include/ntp.h:
+	* include/ntp_crypto.h:
+	* include/ntpd.h:
+	* ntpd/ntp_crypto.c: 
+	* ntpd/ntp_proto.c: 
+	* ntpd/ntpd.c: 
+	* util/ntp_genkeys.c: 
+	Dave Mills closed some potential vulnerabilities in the key protocol.
+
 2000-04-28  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: 4.0.99i3
